
SVN
-------------------------------

XML:   Resolved issue CASTOR-936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with generated code for unbounded choices.
       Details: http://jira.codehaus.org/browse/CASTOR-936
       (Ralf - 20061115)

XML:   Resolved issue CASTOR-1603 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Moved CTF compilation away from ANT compiler task by directly calling compiler in tools.jar of Sun JDK.
       Details: http://jira.codehaus.org/browse/CASTOR-1603
       (Ralf - 20061113)

Version 1.0.5, Nov 11, 2006
-------------------------------

XML:   Resolved issue CASTOR-1669 using contribution from Paul Philion [philion@gmail.com]
       Added feature to set a custom ObjectFactory for object creation on Unmarshaller
       Details: http://jira.codehaus.org/browse/CASTOR-1669
       (Werner - 20061109)

XML:   Resolved issue CASTOR-1678 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with code generation for choices used in extension hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1678
       (Werner - 20061109)
       
XML:   Resolved issue CASTOR-1671 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update CTF document and merge CTFDoc.pdf into ctf.xml
       Details: http://jira.codehaus.org/browse/CASTOR-1671
       (Edward - 20061108)

XML:   Resolved issue CASTOR-1677 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       XML code generator now uses 'java.util.List' as signature type for 'j2' collections.
       Details: http://jira.codehaus.org/browse/CASTOR-1677
       (Werner - 20061108)

XML:   Resolved issue CASTOR-1680 using contribution from Pawel Pesz [castor@insert.net.pl]
       Fixed issue with incorrect constants in AbstractMappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1680
       (Ralf - 20061106)
